# forecasting-wind-power

./: .gitignore  data_wrangling_Silistea.qmd  pyproject.toml  requirements.txt
notebooks/R/analysis/: .Rhistory  Silistea_Feature_Engineering.html  Silistea_Feature_Engineering.qmd
notebooks/R/modelling/: Silistea_Predictive_Modelling.qmd
notebooks/python/analysis/: Kellmarsh_analytics.qmd  Kelmarsh_analytics.qmd  Kelmarsh_analytics.quarto_ipynb
notebooks/python/data_wrangling/: Kelmarsh.qmd  Silistea.qmd
reports/: Kellmarsh_reliability_evaluation.qmd  Kelmarsh_Senvion_MontaCarlo.qmd  Kelmarsh_Senvion_MonteCarlo.qmd  Kelmarsh_Senvion_MonteCarlo.temp  Kelmarsh_Turbines_ForcedOutages_20160114_20230109_n892_cols12.parquet  Kelmarsh_reliability_eval.qmd  Kelmarsh_reliability_eval.quarto_ipynb  _quarto.yml  references.bib
reports/docs/: Kelmarsh_Senvion_MontaCarlo.html  index.html  search.json
reports/docs/site_libs/bootstrap/: bootstrap-7041d6fb6d6c6777c1329d7bb784a602.min.css
reports/online_assets/: Kelmarsh_Turbines_Status_20160114_20230109_n385133_cols12.parquet
src/R/utils/: jthomfuncs.R
src/python/: main.py
